--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -1,24 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QGj-eO-kKT">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Virtual Tourist-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TravelLocationsViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="snJ-PE-Ykl">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eUL-TO-ACz">
+                                <rect key="frame" x="0.0" y="667" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap Pins to Delete" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6b-S4-ZKm">
+                                        <rect key="frame" x="110" y="26" width="155" height="24"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="HCw-DF-hHB"/>
+                                    <constraint firstItem="B6b-S4-ZKm" firstAttribute="centerY" secondItem="eUL-TO-ACz" secondAttribute="centerY" id="VAe-aU-IYh"/>
+                                    <constraint firstItem="B6b-S4-ZKm" firstAttribute="centerX" secondItem="eUL-TO-ACz" secondAttribute="centerX" id="XHP-RX-XYO"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="snJ-PE-Ykl" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="6HU-qM-s0S"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eUL-TO-ACz" secondAttribute="trailing" id="Lhf-NX-bec"/>
+                            <constraint firstItem="eUL-TO-ACz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Oba-hU-sUA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="snJ-PE-Ykl" secondAttribute="trailing" id="PIU-HT-p4V"/>
+                            <constraint firstAttribute="bottom" secondItem="eUL-TO-ACz" secondAttribute="bottom" constant="-75" id="PXH-eM-Unb"/>
+                            <constraint firstItem="snJ-PE-Ykl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dX4-mz-EYX"/>
+                            <constraint firstItem="snJ-PE-Ykl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="i8i-1g-tCx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Virtual Tourist" id="0Sk-Fp-gJJ"/>
+                    <connections>
+                        <outlet property="editNoticeView" destination="eUL-TO-ACz" id="Eag-kR-njD"/>
+                        <outlet property="mapView" destination="snJ-PE-Ykl" id="ee5-rA-5Sw"/>
+                        <segue destination="8OL-1J-dBS" kind="show" identifier="seguePhotoAlbumViewController" id="OgE-9a-G10"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="517.60000000000002" y="106.59670164917542"/>
+        </scene>
+        <!--Photo Album View Controller-->
+        <scene sceneID="7H8-Zn-owl">
+            <objects>
+                <viewController id="8OL-1J-dBS" customClass="PhotoAlbumViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="u2U-5B-xcL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KdR-Ib-Unc">
+                                <rect key="frame" x="0.0" y="64" width="375" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="a6m-tz-PnK"/>
+                                </constraints>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6T-8N-HLU">
+                                <rect key="frame" x="0.0" y="214" width="375" height="409"/>
+                            </containerView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Qv-UF-F18">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="New Collection" width="428" id="AHP-Rv-1de">
+                                        <connections>
+                                            <action selector="toolbarActionButtonPressed:" destination="8OL-1J-dBS" id="k2U-XN-ySS"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4Qv-UF-F18" firstAttribute="top" secondItem="e6T-8N-HLU" secondAttribute="bottom" id="7Cc-1o-fhU"/>
+                            <constraint firstItem="e6T-8N-HLU" firstAttribute="top" secondItem="KdR-Ib-Unc" secondAttribute="bottom" id="9IH-k8-WW0"/>
+                            <constraint firstItem="4Qv-UF-F18" firstAttribute="leading" secondItem="nsp-po-Jyb" secondAttribute="leading" id="EBa-Ae-NQj"/>
+                            <constraint firstItem="e6T-8N-HLU" firstAttribute="leading" secondItem="nsp-po-Jyb" secondAttribute="leading" id="LHD-pk-TSj"/>
+                            <constraint firstItem="4Qv-UF-F18" firstAttribute="trailing" secondItem="nsp-po-Jyb" secondAttribute="trailing" id="UQT-Jf-WD2"/>
+                            <constraint firstItem="KdR-Ib-Unc" firstAttribute="top" secondItem="nsp-po-Jyb" secondAttribute="top" id="YR5-eJ-TZq"/>
+                            <constraint firstItem="nsp-po-Jyb" firstAttribute="trailing" secondItem="e6T-8N-HLU" secondAttribute="trailing" id="ch5-4u-Cek"/>
+                            <constraint firstItem="KdR-Ib-Unc" firstAttribute="leading" secondItem="nsp-po-Jyb" secondAttribute="leading" id="de7-58-arv"/>
+                            <constraint firstItem="nsp-po-Jyb" firstAttribute="bottom" secondItem="4Qv-UF-F18" secondAttribute="bottom" id="o3w-Fe-wcz"/>
+                            <constraint firstItem="nsp-po-Jyb" firstAttribute="trailing" secondItem="KdR-Ib-Unc" secondAttribute="trailing" id="rKT-aT-baO"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nsp-po-Jyb"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionViewContainer" destination="e6T-8N-HLU" id="aoS-2U-ZYC"/>
+                        <outlet property="mapViewContainer" destination="KdR-Ib-Unc" id="4Ya-vH-38I"/>
+                        <outlet property="toolbar" destination="4Qv-UF-F18" id="jbJ-gA-GTh"/>
+                        <outlet property="toolbarButton" destination="AHP-Rv-1de" id="EcW-Bf-Arc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Oe-k2-4Ly" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1237.5999999999999" y="106.59670164917542"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LrL-jn-oiy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QGj-eO-kKT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2lh-1a-0Wa">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="K9m-qC-oH6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rY9-lQ-tQX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-235.19999999999999" y="107.94602698650675"/>
         </scene>
     </scenes>
 </document>
